--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Go<b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">GoTo<b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a rel="nofollow" target="_blank" href="{{site.github}}">Github</a></li>
           </ul>
