--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,6 +27,8 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">GoTo<b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a rel="nofollow" target="_blank" href="{{site.github}}">Github</a></li>
+            <li class="divider"></li>
+            <li><a rel="nofollow" target="_blank" href="https://choikyusun.github.io/">Yalim</a></li>
           </ul>
         </li>
       </ul>
